--- a/NetTaskServer/Web/help.html
+++ b/NetTaskServer/Web/help.html
@@ -32,9 +32,10 @@ public class Class1 : ITask
         <p>配置文件必须以<strong>main.xml</strong>命名并且和dll放置在同一目录，无论是否需要读取配置文件，都需在本地创建<strong>main.xml</strong>，在打包程序集时需要包含此文件，配置文件示例：</p>
 
 <pre style="margin-top: -30px;"><code>
+&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
 &lt;task entrypoint=&quot;TestTask1.dll&quot;&gt;
-  &lt;add key=&quot;a&quot; value=&quot;你好&quot; /&gt;
-  &lt;add key=&quot;b&quot; value=&quot;1&quot; /&gt;
+    &lt;add key=&quot;a&quot; value=&quot;你好&quot; /&gt;
+    &lt;add key=&quot;b&quot; value=&quot;1&quot; /&gt;
 &lt;/task&gt;
 </code></pre>
 <p>其中<em>entrypoint</em>指定了任务所在的dll，任务管理器将会在此dll中查找任务。可以不限制添加任意数量的键值对，通过<em>configuration</em>对象来获取值。</p>
