add email notify

--- a/NetTaskServer/Web/main.html
+++ b/NetTaskServer/Web/main.html
@@ -102,11 +102,17 @@
                                 程序集
                             </a>
                         </li>
+                        <li class="nav-item" id="mailItem">
+                            <a class="nav-link" href="#mail">
+                                <span data-feather="mail"></span>
+                                邮件通知
+                            </a>
+                        </li>
                         <li class="nav-item" id="helpItem">
-                                <a class="nav-link" href="#help">
-                                    <span data-feather="help-circle"></span>
-                                    帮助
-                                </a>
+                            <a class="nav-link" href="#help">
+                                <span data-feather="help-circle"></span>
+                                帮助
+                            </a>
                         </li>
                     </ul>
 
